pass in callback function to MonthDropdown component to change the month value and fix styling problem with month dropdown causing components to shift

--- a/src/Components/MonthDropdown/MonthDropdown.css
+++ b/src/Components/MonthDropdown/MonthDropdown.css
@@ -8,9 +8,12 @@
   align-items: center;
   justify-content: space-between;
   width: 150px;
-  padding: 10px;
+  padding: 0 10px;
   cursor: pointer;
   border-radius: 12px;
+  width: 10rem;
+  box-sizing: border-box;
+  block-size: 2.7rem;
 }
 
 .months {
